fixed image clinician

--- a/views/clinician_profile.hbs
+++ b/views/clinician_profile.hbs
@@ -122,7 +122,7 @@
                         </div>
                         <div class="wt-grid-item size-5@t">
                             <label>Profile Picture URL</label>
-                            <input name="urlImage" type="text"/>
+                            <input name="urlImage" type="text" value={{clinician.urlImage}} />
                         </div>
                         <div class="wt-grid-item size-5@t"></div>
                         <div class="wt-grid-item size-6@t">
